ubuntu.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ubuntu
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  strategy: {}
  template:
    metadata:
      labels:
        app: ubuntu
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: ubuntu:22.04
        name: ubuntu
        command: ["/bin/sleep", "3650d"]
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
        volumeMounts:
          - mountPath: /data
            name: bash-script
      volumes:
      - name: bash-script
        configMap:
          name: bash-script
          defaultMode: 0777
